# entities/user/fields.go
@@ -5,8 +5,7 @@ const (
 
 	Table           string = "users"
 	FieldID         string = "id"
-	FieldName       string = "name"
 	FieldCreatedAt  string = "created_at"
 	FieldModifiedAt string = "modified_at"
-	FieldDeletedAt  string = "deleted_at"
+	FieldMetaData   string = "metadata"
 )
