# handlers/messages.go
@@ -2,7 +2,6 @@ package handlers
 
 import (
 	"github.com/hnpatil/gochat/entities"
-	"github.com/hnpatil/gochat/entities/message"
 )
 
 type CreateMessage struct {
@@ -11,16 +10,8 @@ type CreateMessage struct {
 	RoomID string `path:"roomID" validate:"required"`
 }
 
-type UpdateMessage struct {
-	UserRequest
-	MessageBody
-	RoomID    string `path:"roomID" validate:"required"`
-	MessageID string `path:"messageID" validate:"required,uuid"`
-}
-
 type MessageBody struct {
-	Status  message.Status `json:"status" default:"DRAFT" validate:"oneof=DRAFT SENT" example:"SENT"` //Message status
-	Content string         `json:"content" example:"Hello"`                                           //Message content
+	Content string `json:"content" example:"Hello"` //Message content
 }
 
 type GetMessage struct {
@@ -29,16 +20,10 @@ type GetMessage struct {
 	MessageID string `path:"messageID" validate:"required,uuid"`
 }
 
-type DeleteMessage struct {
-	UserRequest
-	RoomID    string `path:"roomID" validate:"required"`
-	MessageID string `path:"messageID" validate:"required,uuid"`
-}
-
 type ListMessages struct {
 	UserRequest
-	RoomID         string `path:"roomID" validate:"required"`
-	ModifiedBefore string `query:"modifiedBefore" default:"0001-01-01 00:00:00" validate:"datetime=2006-01-02 15:04:05"`
+	RoomID        string `path:"roomID" validate:"required"`
+	CreatedBefore string `query:"createdBefore"`
 }
 
 type MessageResponse struct {
