# handlers/room/handler.go
@@ -26,7 +26,7 @@ func New(svc services.Room) handlers.Room {
 // @Success 201 {object} handlers.RoomResponse
 // @Router /v1/rooms [post]
 func (h *handler) Create(ctx *gofr.Context, req *handlers.CreateRoom) (*entities.Room, error) {
-	return h.svc.Create(ctx, &services.CreateRoom{Name: req.Name, UserID: req.UserID, Members: req.Members, RoomID: req.RoomID})
+	return h.svc.Create(ctx, &services.CreateRoom{Metadata: req.Metadata, UserID: req.UserID, Members: req.Members, RoomID: req.ID})
 }
 
 // @Summary Update a room
@@ -41,7 +41,7 @@ func (h *handler) Create(ctx *gofr.Context, req *handlers.CreateRoom) (*entities
 // @Success 200 {object} handlers.RoomResponse
 // @Router /v1/rooms/{id} [patch]
 func (h *handler) Update(ctx *gofr.Context, req *handlers.UpdateRoom) (*entities.Room, error) {
-	return h.svc.Update(ctx, &services.UpdateRoom{RoomID: req.ID, UserID: req.UserID, Name: req.Name})
+	return h.svc.Update(ctx, &services.UpdateRoom{RoomID: req.ID, UserID: req.UserID, Metadata: req.Metadata})
 }
 
 // @Summary List rooms
@@ -73,18 +73,4 @@ func (h *handler) List(ctx *gofr.Context, req *handlers.ListRooms) ([]*entities.
 // @Router /v1/rooms/{id} [get]
 func (h *handler) Get(ctx *gofr.Context, req *handlers.GetRoom) (*entities.Room, error) {
 	return h.svc.Get(ctx, &services.GetRoom{UserID: req.UserID, RoomID: req.ID})
-}
-
-// @Summary Delete a room
-// @Description Delete a room. Calling user should be an ADMIN in the room.
-// @Tags Rooms
-// @Accept json
-// @Produce json
-// @Security ApiKey
-// @Param X-User-ID header string true "External identifier of the user"
-// @Param id path string true "Room ID"
-// @Success 204
-// @Router /v1/rooms/{id} [delete]
-func (h *handler) Delete(ctx *gofr.Context, req *handlers.DeleteRoom) error {
-	return h.svc.Delete(ctx, &services.DeleteRoom{RoomID: req.ID, UserID: req.UserID})
 }
