# handlers/rooms.go
@@ -1,6 +1,9 @@
 package handlers
 
-import "github.com/hnpatil/gochat/entities"
+import (
+	"github.com/hnpatil/gochat/entities"
+	"github.com/hnpatil/gochat/pkg/metadata"
+)
 
 type CreateRoom struct {
 	UserRequest
@@ -8,9 +11,9 @@ type CreateRoom struct {
 }
 
 type CreateRoomBody struct {
-	RoomID  string   `json:"roomID" example:"89e47f30"`                                    //Optional unique identifier of the room. A default UID is created if not present
-	Name    string   `json:"name" example:"Friends"`                                       //Optional group name
-	Members []string `json:"members" validate:"required,gt=0" example:"89e46f31,89e46f32"` //List of user ids of room members.
+	ID       string            `json:"id" example:"89e47f30"`                                        //Optional unique identifier of the room. A default UID is created if not present
+	Metadata metadata.Metadata `json:"metadata,omitempty"`                                           //Room metadata
+	Members  []string          `json:"members" validate:"required,gt=0" example:"89e46f31,89e46f32"` //List of user ids of room members.
 }
 
 type UpdateRoom struct {
@@ -20,15 +23,10 @@ type UpdateRoom struct {
 }
 
 type UpdateRoomBody struct {
-	Name string `json:"name" example:"Friends"` //Updated group name
+	Metadata metadata.Metadata `json:"metadata,omitempty"` //Room metadata
 }
 
 type GetRoom struct {
-	UserRequest
-	ID string `path:"id" validate:"required"`
-}
-
-type DeleteRoom struct {
 	UserRequest
 	ID string `path:"id" validate:"required"`
 }
