# static/swagger.json
@@ -156,45 +156,6 @@
                     }
                 }
             },
-            "delete": {
-                "security": [
-                    {
-                        "ApiKey": []
-                    }
-                ],
-                "description": "Delete a room. Calling user should be an ADMIN in the room.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Rooms"
-                ],
-                "summary": "Delete a room",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "External identifier of the user",
-                        "name": "X-User-ID",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Room ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    }
-                }
-            },
             "patch": {
                 "security": [
                     {
@@ -283,7 +244,7 @@
                     {
                         "type": "string",
                         "description": "Modified date time upto which messages should be returned",
-                        "name": "modifiedBefore",
+                        "name": "createdBefore",
                         "in": "query"
                     }
                 ],
@@ -341,112 +302,6 @@
                 "responses": {
                     "201": {
                         "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.MessageResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/rooms/{roomID}/messages/messageID": {
-            "delete": {
-                "security": [
-                    {
-                        "ApiKey": []
-                    }
-                ],
-                "description": "Delete a message. Message should be a DRAFT and Calling user should be the sender of the message.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Messages"
-                ],
-                "summary": "Delete a message",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "External identifier of the user",
-                        "name": "X-User-ID",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Room id of the room in which message is added",
-                        "name": "roomID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Message id",
-                        "name": "messageID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    }
-                }
-            },
-            "patch": {
-                "security": [
-                    {
-                        "ApiKey": []
-                    }
-                ],
-                "description": "Update a message and return the update message. Message should be a DRAFT and Calling user should be the sender of the message.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Messages"
-                ],
-                "summary": "Update a message",
-                "parameters": [
-                    {
-                        "description": "Message Request",
-                        "name": "message",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handlers.MessageBody"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "External identifier of the user",
-                        "name": "X-User-ID",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Room id of the room in which message is added",
-                        "name": "roomID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Message id",
-                        "name": "messageID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handlers.MessageResponse"
                         }
@@ -639,11 +494,6 @@
                     "type": "string",
                     "example": "2025-02-08T14:13:39.080551Z"
                 },
-                "deletedAt": {
-                    "description": "Time when entity was deleted",
-                    "type": "string",
-                    "example": "2025-02-08T14:13:39.080551Z"
-                },
                 "id": {
                     "description": "Unique identifier of the message",
                     "type": "string",
@@ -663,20 +513,6 @@
                     "description": "Unique identifier of the user that created the message",
                     "type": "string",
                     "example": "89e46f30"
-                },
-                "sentAt": {
-                    "description": "Time when the message was sent. Is null for Drafts",
-                    "type": "string",
-                    "example": "2025-02-08T14:13:39.080551Z"
-                },
-                "status": {
-                    "description": "Status of the message",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/message.Status"
-                        }
-                    ],
-                    "example": "SENT"
                 }
             }
         },
@@ -688,20 +524,10 @@
                     "type": "string",
                     "example": "2025-02-08T14:13:39.080551Z"
                 },
-                "deletedAt": {
-                    "description": "Time when entity was deleted",
-                    "type": "string",
-                    "example": "2025-02-08T14:13:39.080551Z"
-                },
                 "id": {
                     "description": "Unique identifier of the room",
                     "type": "string",
                     "example": "89e47f30"
-                },
-                "isGroup": {
-                    "description": "Indicates if the room is a group. Is false for chats.",
-                    "type": "boolean",
-                    "example": true
                 },
                 "members": {
                     "description": "List of room members",
@@ -710,15 +536,18 @@
                         "$ref": "#/definitions/entities.RoomMember"
                     }
                 },
+                "metadata": {
+                    "description": "Room meta data",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/metadata.Metadata"
+                        }
+                    ]
+                },
                 "modifiedAt": {
                     "description": "Time when entity was modified",
                     "type": "string",
                     "example": "2025-02-08T14:13:39.080551Z"
-                },
-                "name": {
-                    "description": "Name of the room",
-                    "type": "string",
-                    "example": "Friends"
                 }
             }
         },
@@ -730,11 +559,6 @@
                     "type": "string",
                     "example": "2025-02-08T14:13:39.080551Z"
                 },
-                "deletedAt": {
-                    "description": "Time when entity was deleted",
-                    "type": "string",
-                    "example": "2025-02-08T14:13:39.080551Z"
-                },
                 "modifiedAt": {
                     "description": "Time when entity was modified",
                     "type": "string",
@@ -742,10 +566,6 @@
                 },
                 "role": {
                     "description": "Role defines permissions of user on the room.",
-                    "enum": [
-                        "ADMIN",
-                        "MEMBER"
-                    ],
                     "allOf": [
                         {
                             "$ref": "#/definitions/roommember.Role"
@@ -757,6 +577,14 @@
                     "description": "Unique identifier of the room",
                     "type": "string",
                     "example": "89e47f30"
+                },
+                "user": {
+                    "description": "User object associated with member",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/entities.User"
+                        }
+                    ]
                 },
                 "userID": {
                     "description": "External identifier of the user",
@@ -773,25 +601,23 @@
                     "type": "string",
                     "example": "2025-02-08T14:13:39.080551Z"
                 },
-                "deletedAt": {
-                    "description": "Time when entity was deleted",
-                    "type": "string",
-                    "example": "2025-02-08T14:13:39.080551Z"
-                },
                 "id": {
                     "description": "External identifier of the user",
                     "type": "string",
                     "example": "89e46f30"
                 },
+                "metadata": {
+                    "description": "Metadata associated with the user",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/metadata.Metadata"
+                        }
+                    ]
+                },
                 "modifiedAt": {
                     "description": "Time when entity was modified",
                     "type": "string",
                     "example": "2025-02-08T14:13:39.080551Z"
-                },
-                "name": {
-                    "description": "Name of the user",
-                    "type": "string",
-                    "example": "John Doe"
                 }
             }
         },
@@ -801,6 +627,11 @@
                 "members"
             ],
             "properties": {
+                "id": {
+                    "description": "Optional unique identifier of the room. A default UID is created if not present",
+                    "type": "string",
+                    "example": "89e47f30"
+                },
                 "members": {
                     "description": "List of user ids of room members.",
                     "type": "array",
@@ -812,15 +643,13 @@
                         "89e46f32"
                     ]
                 },
-                "name": {
-                    "description": "Optional group name",
-                    "type": "string",
-                    "example": "Friends"
-                },
-                "roomID": {
-                    "description": "Optional unique identifier of the room. A default UID is created if not present",
-                    "type": "string",
-                    "example": "89e47f30"
+                "metadata": {
+                    "description": "Room metadata",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/metadata.Metadata"
+                        }
+                    ]
                 }
             }
         },
@@ -831,20 +660,6 @@
                     "description": "Message content",
                     "type": "string",
                     "example": "Hello"
-                },
-                "status": {
-                    "description": "Message status",
-                    "default": "DRAFT",
-                    "enum": [
-                        "DRAFT",
-                        "SENT"
-                    ],
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/message.Status"
-                        }
-                    ],
-                    "example": "SENT"
                 }
             }
         },
@@ -889,20 +704,26 @@
         "handlers.UpdateRoomBody": {
             "type": "object",
             "properties": {
-                "name": {
-                    "description": "Updated group name",
-                    "type": "string",
-                    "example": "Friends"
+                "metadata": {
+                    "description": "Room metadata",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/metadata.Metadata"
+                        }
+                    ]
                 }
             }
         },
         "handlers.UserBody": {
             "type": "object",
             "properties": {
-                "name": {
-                    "description": "Name of the user",
-                    "type": "string",
-                    "example": "John Doe"
+                "metadata": {
+                    "description": "User Metadata",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/metadata.Metadata"
+                        }
+                    ]
                 }
             }
         },
@@ -925,16 +746,9 @@
                 }
             }
         },
-        "message.Status": {
-            "type": "string",
-            "enum": [
-                "DRAFT",
-                "SENT"
-            ],
-            "x-enum-varnames": [
-                "StatusDraft",
-                "StatusSent"
-            ]
+        "metadata.Metadata": {
+            "type": "object",
+            "additionalProperties": true
         },
         "roommember.Role": {
             "type": "string",
